# EcoEats-Project

./: .gitignore  Dockerfile  README.md  debug_matching.py  fly.toml  package-lock.json  package.json  pnpm-lock.yaml  simple_debug.py  web.config
.github/workflows/: main_ecoeats.yml
EcoEats/: EcoEats.py
EcoEats/backend/: db.sqlite3  manage.py
EcoEats/backend/ecoeats_api/: asgi.py  settings.py  urls.py  wsgi.py
EcoEats/backend/inventory/: models.py  serializers.py  urls.py  views.py
EcoEats/backend/inventory/migrations/: 0001_initial.py
EcoEats/backend/recipes/: models.py  urls.py  views.py
EcoEats/backend/recipes/migrations/: 0001_initial.py
EcoEats/frontend/.next/: app-build-manifest.json  trace
EcoEats/frontend/.next/cache/: .rscinfo
EcoEats/frontend/.next/server/: app-paths-manifest.json  (+4 more)
EcoEats/frontend/app/: globals.css
EcoEats/frontend/lib/: api.ts  mock-data.ts
EcoEats/frontend/types/: inventory.ts  recipe.ts
EcoEats/templates/: index.html  instructions.html  recipes.html
app/: layout.tsx  page.tsx
app/dashboard/: page.tsx
app/inventory/: page.tsx
app/inventory/add/: page.tsx
app/leftover/: page.tsx  types.ts
app/leftover/api/: route.ts
app/leftover/db/: index.ts
app/leftover/history/: page.tsx
app/recipes/: page.tsx
app/recipes/[id]/: page.tsx
app/settings/: page.tsx
backend/: Dockerfile  fetch_themealdb_recipes.py  fly.toml  init_db.py  main.py  models.py  populate_inventory.py  pyproject.toml  recommendation_engine.py  schemas.py
lib/: api.ts  food-categories.ts
types/: inventory.ts  recipe.ts
(+68 files in other folders)
